# Trinity

./: .gitignore  AccountCreation.qml  BackButton.qml  CMakeLists.txt  Client.qml  Communities.qml  Community.qml  Dialog.qml  Directory.qml  ImageViewer.qml  InviteDialog.qml  Login.qml  README.md  RoomSettings.qml  ServerSelection.qml  Settings.qml  community.h  communitylistmodel.cpp  communitylistmodel.h  desktop.h  directorymodel.cpp  directorymodel.h  emote.h  emotelistmodel.cpp  eventmodel.cpp  eventmodel.h  main.cpp  matrixcore.cpp  matrixcore.h  membermodel.cpp  network.h  qml.qrc  requestsender.h  room.h  roomlistmodel.cpp  roomlistmodel.h  roomlistsortmodel.cpp  roomlistsortmodel.h
include/: desktop.h  emotelistmodel.h  eventmodel.h  matrixcore.h  membermodel.h  network.h  requestsender.h  room.h  roomlistmodel.h
qml/: AccountCreation.qml  Client.qml  Communities.qml  Directory.qml  Profile.qml  ServerSelection.qml  main.qml
src/: eventmodel.cpp  main.cpp  matrixcore.cpp  roomlistmodel.cpp
